Version 3.94-0

  *     options parameter for xmlParse() and htmlParse() for controlling the parser.
        (Currently only used when encoding is explicitly specified.)

  *     encoding parameter for xmlParse() and xmlTreeParse() now works for XML documents,
        not just HTML documents.

  *     Update for readHTMLTable() method so that we look at just the final <tr> node 
        in a <thead>.

Version 3.93-1

  *     Fixed bug in findXInclude() that sometimes got the wrong XMLXIncludeStartNode.
        Hence getNodeLocation() might report the wrong file, but correct line number!

  *     findXInclude() now has a recursive parameter that resolves the chain of XIncludes.
        This returns the full path to the file, relative to the base/top-level document,
        not just the parent document.

  *     Change to the default value of the error parameter in htmlParse() and htmlTreeParse() 
        which will generate a structured R error if there is an IO error.
        The set of issues that will raise an error will be broadened in the future.

Version 3.93-0

  *    Enabled the fixing of <dummy> namespaces by finding the definition o
       for that prefix in the ancestor nodes. 

Version 3.92-2

  *    Synchronized compilation flags for Windows with those on OSX & Linux.

Version 3.92-1

  *    Restore original error handler function for htmlParse() and htmlTreeParse()

  *    Fixed a reference counting problem caused by not adding a finalizer in the
       as() method for coercing an XMLInternalNode to an XMLInternalDocument.
       Example from Janko Thyson.

  *    Fixed up some partial argument names found by R CMD check!


Version 3.92-0

  *    Added --enable-xml-debug option for the configure script and this activates
       the debugging diagnostic reporting, mainly for the garbage collection and node
       reference counts.

  *    Work-around for HTML documents not being freed (but XML documents are!)
