@@ -1703,3 +1703,46 @@ R_getChildByName(USER_OBJECT_ r_node, USER_OBJECT_ r_index, USER_OBJECT_ r_addFi
 
     return(R_createXMLNodeRef(ptr, r_addFinalizer));
 }
+
+
+/*
+ This is a C-level version equivalent to
+     xmlApply(node, xmlValue)
+
+ 
+*/
+
+USER_OBJECT_
+R_childStringValues(SEXP r_node, SEXP r_len, SEXP r_asVector, SEXP r_encoding)
+{
+    xmlNodePtr node, kid;
+    int len, i;
+    SEXP ans;
+    int asVector = LOGICAL(r_asVector)[0];
+    int encoding = INTEGER(r_encoding)[0];
+    xmlChar *tmp;
+
+    node = (xmlNodePtr) R_ExternalPtrAddr(r_node);    
+    len = INTEGER(r_len)[0];
+
+    if(asVector)
+	ans = NEW_CHARACTER(len);
+    else
+	ans = NEW_LIST(len);
+
+    PROTECT(ans);
+
+    for(i = 0, kid = node->children; kid && i < len; i++, kid = kid->next) {
+	tmp  = xmlNodeGetContent(kid);	
+	SEXP val = mkCharCE(tmp, encoding);
+	PROTECT(val);
+	if(asVector)
+	    SET_STRING_ELT(ans, i, val);
+	else
+	    SET_VECTOR_ELT(ans, i, ScalarString(val));
+	UNPROTECT(1);
+    }
+
+    UNPROTECT(1);
+    return(ans);
+}
